added caching to words and letters

--- a/app/elements/tinavg-webapp.html
+++ b/app/elements/tinavg-webapp.html
@@ -33,6 +33,7 @@
     <iron-localstorage name="tinavg-learnmodus" value="{{learnmodus}}"></iron-localstorage>
     <iron-localstorage name="tinavg-recordmodus" value="{{recordmodus}}"></iron-localstorage>
     <iron-localstorage name="tinavg-nerdmodus" value="{{nerdmodus}}"></iron-localstorage>
+    <iron-localstorage name="tinavg-nerdsprache" value="{{nerdSprache}}"></iron-localstorage>
     <paper-drawer-panel id="pdp" responsive-width="25000px" right-drawer>
       <div id="collapse" class="mini-menu" drawer>
         <div>
@@ -52,10 +53,10 @@
         </div>
         <br /><div>Earmodus: <paper-toggle-button id="select_earmodus" on-tap="toggleEarModus" checked$="{{earmodus}}"></paper-toggle-button></div>
         <br /><div>Learnmodus: <paper-toggle-button id="select_learnmodus" on-tap="toggleLearnModus" checked$="{{learnmodus}}"></paper-toggle-button></div>
-        <br /><div>Meiseldmodus: <paper-toggle-button id="select_nerdmodus" on-tap="toggleNerdModus" checked$="{{nerdmodus}}"></paper-toggle-button></div>
+        <br /><div>Meiselmodus: <paper-toggle-button id="select_nerdmodus" on-tap="toggleNerdModus" checked$="{{nerdmodus}}"></paper-toggle-button></div>
         <br /><div>
           Meiselsprache: 
-          <select id="meiselspracheliste" on-change="setNerdSprache" disabled>
+          <select id="meiselspracheliste" on-change="setNerdSprache" disabled$="{{!nerdmodus}}">
             <option value="de">German</option>
             <option value="en">English</option>
             <option value="ar">Arabic</option>
@@ -131,12 +132,6 @@
         <paper-toast id="übersetzung" text="{{currLang}}"></paper-toast>
       </paper-header-panel>
     </paper-drawer-panel>
-      <!--
-      <div class="content">
-        <div class="horizontal layout">
-        </div>
-      </div>
-      -->
   </template>
 </dom-module>
 <script>
@@ -168,8 +163,7 @@
         type: Boolean
       },
       nerdSprache: {
-        type: String,
-        value: 'de'
+        type: String
       },
       langHelp: {
         type: String,
@@ -208,6 +202,9 @@
         this.nerdmodus = JSON.parse(localStorage.getItem("tinavg-nerdmodus"));
       }
 
+      if(JSON.parse(localStorage.getItem("tinavg-nerdsprache")) === undefined) {
+        this.nerdmodus = JSON.parse(localStorage.getItem("tinavg-nerdsprache"));
+      }
     },
     ready: function() {
 
@@ -222,6 +219,7 @@
       if(this.learnmodus === undefined) this.learnmodus = false;
       if(this.recordmodus === undefined) this.recordmodus = false;
       if(this.nerdmodus === undefined) this.nerdmodus = false;
+      if(this.nerdSprache === undefined) this.nerdSprache = "de";
       this.$.jt.forceLearnmodus(this.learnmodus);
 
       // Keyboard Shortcut Bindings
@@ -354,7 +352,6 @@
         this.currLang = newLang;
       } else {
         var nextLangInd = (this.languageList.indexOf(this.currLang) === -1 || this.languageList.indexOf(this.currLang) + 1 >= this.languageList.length) ? 0 : this.languageList.indexOf(this.currLang) + 1;
-        console.log(nextLangInd);
         this.currLang = this.languageList[nextLangInd];
       }
       this.$.jt.resetBox();
@@ -364,19 +361,20 @@
     },
     toggleNerdModus: function() {
       this.nerdmodus = !this.nerdmodus;
-      this.$.meiselspracheliste.disabled = !this.nerdmodus;
       this.showÜbersetzung();
     },
     showÜbersetzung: function() {
       // stub to add phrase info
-      if(this.nerdmodus && this.$.wboard.getWordObj().übersetzung !== undefined && this.$.wboard.getWordObj().übersetzung[this.nerdSprache]) {
-        this.$.übersetzung.text = this.$.wboard.getWordObj().übersetzung[this.nerdSprache];
-      } else if(this.$.wboard.getWordObj().uebersetzungen[this.nerdSprache] !== undefined) {
-        this.$.übersetzung.text = this.$.wboard.getWordObj().uebersetzungen[this.nerdSprache];
-      } else {
-        this.$.übersetzung.text = "Es tut mir Leid.  Keine Übersetzung :-(";
+      if(this.nerdmodus) {
+        if(this.$.wboard.getWordObj().übersetzung !== undefined && this.$.wboard.getWordObj().übersetzung[this.nerdSprache]) {
+          this.$.übersetzung.text = this.$.wboard.getWordObj().übersetzung[this.nerdSprache];
+        } else if(this.$.wboard.getWordObj().uebersetzungen[this.nerdSprache] !== undefined) {
+          this.$.übersetzung.text = this.$.wboard.getWordObj().uebersetzungen[this.nerdSprache];
+        } else {
+          this.$.übersetzung.text = "Es tut mir Leid.  Keine Übersetzung :-(";
+        }
+        this.$.übersetzung.show();
       }
-      if(this.nerdmodus) this.$.übersetzung.show();
     },
     setNerdSprache: function(ev) {
       this.nerdSprache = ev.target.value;
