initial upgrade to polymer 1.0

--- a/app/elements/tinavg-webapp.html
+++ b/app/elements/tinavg-webapp.html
@@ -77,7 +77,7 @@
             </div>
             <word-board id="wboard" class="horizontal center-justified layout flex-2" lang-code="{{currLang}}" earmodus="{{earmodus}}"></word-board>
             <div class="horizontal end-justified layout flex">
-              <iron-icon id="menutoggle" class="spin-flip-transition tinavg-med-icon" icon="menu" paper-drawer-toggle></iron-icon>
+              <iron-icon id="menutoggle" class="spin-flip-transition tinavg-med-icon big" icon="menu" paper-drawer-toggle></iron-icon>
             </div>
           </div>
           <div class="core-header horizontal justified layout center">
