update to 1.0 and gulp fixes

--- a/app/elements/tinavg-webapp.html
+++ b/app/elements/tinavg-webapp.html
@@ -121,7 +121,7 @@
                   <li><div class="tinavg-med-icon"><iron-icon id="help-overlay-help-show" icon="help" class="tinavg-med-icon"></iron-icon></div>: Shows this help menu.</li>
                   <li><div class="tinavg-med-icon"><lang-flag id="help-overlay-switch-modus" mylang="[[currLang]]" langs="[[languageList]]" class="same-line"></lang-flag></div>: Switches the language.  Does NOT check word.</li>
                   <li><div class="tinavg-med-icon"><iron-icon icon="av:mic" class="tinavg-med-icon"></iron-icon></div>: Record voice in Talkmodus.  Also stops recording.</li>
-                  <li><div class="tinavg-med-icon"><iron-icon icon="av:play-circle-fill" class="tinavg-med-icon"></iron-icon></div>: Play voice recording.  Also stops recording.</li>
+                  <li><div class="tinavg-med-icon"><iron-icon icon="av:play-circle-filled" class="tinavg-med-icon"></iron-icon></div>: Play voice recording.  Also stops recording.</li>
                   <li>Target Word: You can click this to have the word spoken outloud.</li>
                 </ol>
                 <div id="help-lang-specific"></div>
