--- a/app/services/letter-service.html
+++ b/app/services/letter-service.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <!-- Additional Component Load -->
 <link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="tinavg-behavior.html">
 <dom-module id="letter-service">
   <style>
   iron-ajax {
@@ -20,12 +21,9 @@
 (function() {
   Polymer({
     is: 'letter-service',
+    behaviors: [TinavgBehavior],
 
     properties: {
-      currlang: {
-        type: String,
-        notify: true
-      },
       lobj: {
         type: Object,
         notify: true,
@@ -37,14 +35,14 @@
       }
     },
     listeners: {
-      'currlang-changed': 'changeJsonUrl'
+      'game-lang-changed': 'changeJsonUrl'
     },
     attached: function() {
-      this.jsonUrl = this.createJsonUrl(this.currlang);
+      this.jsonUrl = this.createJsonUrl(this.gameLang);
     },
     changeJsonUrl: function(ev) {
-      this.jsonUrl = this.createJsonUrl(this.currlang);
-      if(this.letterListBox && this.letterListBox.allLettersList[this.currlang]) {
+      this.jsonUrl = this.createJsonUrl(this.gameLang);
+      if(this.letterListBox && this.letterListBox.allLettersList[this.gameLang]) {
         this.letterListBox.setLetters = false;
         this.async(function() { this.spoofLoad(); }, 150);
       } else {
