--- a/app/services/word-service.html
+++ b/app/services/word-service.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <!-- Additional Component Load -->
 <link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="tinavg-behavior.html">
+<link rel="import" href="../elements/tinavg-behavior.html">
 <dom-module id="word-service">
   <style>
   iron-ajax {
