--- a/app/offline.html
+++ b/app/offline.html
@@ -26,6 +26,8 @@
   <script src="../bower_components/viewport-units-buggyfill/viewport-units-buggyfill.hacks.js"></script>
   <!-- Cookie Consent -->
   <script src="../bower_components/cookieconsent2/cookieconsent.js"></script>
+  <!-- Firebase -->
+  <script src="//cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
 
   <!-- load icons as blocking operation -->
   <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
